# Diablo-Clone

./: CMakeLists.txt  build.bat  c_cpp_properties.json  debug_build.bat
src/: main.cpp
src/core/: constants.hpp  coordinate_system.hpp  resource_manager.hpp  theme.hpp  types.hpp
src/entities/: map.cpp  map.hpp  player.cpp  player.hpp
src/rendering/: debug_overlay.hpp  highlight.cpp  highlight.hpp
src/systems/: camera_system.hpp  movement_system.hpp  render_system.hpp  state_machine.hpp
